@startuml

title __CLI's Class Diagram__\n

  namespace ui {
    namespace cli {
      class ui.cli.ItemView {
          - description : String
          - photoRef : String
          - title : String
          + ItemView()
          + equals()
          + getItem()
          + hashCode()
          + parse()
          + setController()
          + toStringArray()
          + toggle()
          + toggleLeft()
          + updateLanguage()
          - addButtons()
          - addLines()
          - addRightButton()
          - configureView()
      }
    }
  }
  

  namespace ui {
    namespace cli {
      class ui.cli.ItemViewController {
          - items : ArrayList<ItemView>
          + ItemViewController()
          + add()
          + isEmpty()
          + parse()
          + remove()
          + setManager()
          + size()
          + toStringArray()
          + toggle()
          + toggleLeft()
          + toggleRight()
      }
    }
  }
  

  namespace ui {
    namespace cli {
      class ui.cli.LayoutManager {
          - controllers : ArrayList<ItemViewController>
          - height : int
          - leftIndex : int
          - separationWidth : int
          - width : int
          + LayoutManager()
          + add()
          + add()
          + isEmpty()
          + parse()
          + print()
          + remove()
          + setSepWidth()
          + size()
          + toggleLeft()
          + toggleRight()
          - toStringArray()
      }
    }
  }
  

  namespace ui {
    namespace cli {
      class ui.cli.MenuBar {
          - items : ArrayList<MenuBarItem>
          - width : int
          + MenuBar()
          + addItem()
          + parse()
          + removeItem()
          + setGuInterface()
          + swapSearch()
          + toStringArray()
          + toggle()
          - addLines()
      }
    }
  }
  

  namespace ui {
    namespace cli {
      abstract class ui.cli.MenuBarItem {
          {abstract} + getCommandString()
          + getParser()
          {abstract} + parse()
      }
    }
  }
  

  namespace ui {
    namespace cli {
      class ui.cli.SearchBar {
          - results : ArrayList<Value>
          + SearchBar()
          + getCommandString()
          + getParser()
          + getResults()
          + parse()
          + search()
          + toString()
      }
    }
  }
  

  namespace ui {
    namespace cli {
      class ui.cli.StatementList {
          - statements : ArrayList<Value>
          + StatementList()
          + add()
          + getImage()
          + parse()
          + toStringArray()
          + toggle()
          - addComp()
      }
    }
  }
  

  ui.cli.ItemView -up-|> javax.swing.JPanel
  ui.cli.ItemView o-- ui.cli.ItemViewController : controller
  ui.cli.ItemView o-- model.data.Value : item
  ui.cli.ItemView o-- ui.cli.SearchBar : searchBar
  ui.cli.ItemView o-- ui.cli.StatementList : statements
  ui.cli.ItemViewController o-- ui.cli.LayoutManager : manager
  ui.cli.LayoutManager o-- ui.cli.MenuBar : menuBar
  ui.cli.MenuBar -up-|> javax.swing.JMenuBar
  ui.cli.MenuBar o-- ui.GUInterface : guInterface
  ui.cli.MenuBar o-- ui.cli.SearchBar : searchBar
  ui.cli.MenuBarItem -up-|> javax.swing.JMenu
  ui.cli.SearchBar -up-|> javax.swing.JPanel
  ui.cli.SearchBar o-- model.data.ScopedSearch : searchService
  ui.cli.StatementList -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
